tests/invalid/occurs_check.eff
let rec f x = f in f;;
